:sparkles: Fix styling and UX on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,17 +12,30 @@ body {
   height: 100%;
 }
 
+video {
+  width: 100%;
+}
+
 .message-form {
   z-index: 999;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
+  max-width: 300px;
+}
+
+.thanks-form {
+  z-index: 999;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  max-width: 220px;
 }
 
 .footer {
   z-index: 999;
   position: absolute;
-  bottom: 10px;
-  left: 10px;
-  padding: 10px;
+  bottom: 35px;
+  left: 5px;
+  padding: 5px;
 }
